--- a/src/Components/Card/ItemCard.module.css
+++ b/src/Components/Card/ItemCard.module.css
@@ -29,7 +29,7 @@
     
 }
 .btn{
-    width: 20%;
+    width: 30%;
     height: 40px;
     border-radius:  16px;
     border-color: white;
