--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 footer{
     background-color:rgb(30, 30, 30);
-    height: 100vh;
+    height: 600px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -8,7 +8,7 @@ footer{
     padding: 50px;
     margin: 0px;
     width: 100%;
-    position:absolute;
+  
     display: block;
     left:0;
     line-height: 40px;
@@ -33,9 +33,10 @@ div{
 .content-container{
  border-top: 2px solid white;
  display: flex;
- width: 45rem;
+ width: 70rem;
  height:320px;
  padding: 20px;
+ margin: auto;
 }
 .main-container{
     display: block;
