--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -68,6 +68,9 @@ margin-bottom: 30px;
 }
 
 @media (max-width: 768px) {
+  nav{
+    height:17%;
+  }
  
   .navBtn {
     display: flex;
@@ -85,6 +88,7 @@ margin-bottom: 30px;
     padding: 2rem;
     box-shadow: 0 4px 6px rgba(35, 28, 28, 0.1);
      pointer-events: auto; 
+     
   }
 
 
@@ -98,6 +102,11 @@ margin-bottom: 30px;
 
   .navMenu.active {
     display: flex;
+
+  }
+  .logo{
+height: 80px;
+margin-bottom: 30px;
 
   }
   .link { 
